kubernetes/h2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: h2-database
  namespace: ms-producto-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: h2-database
  template:
    metadata:
      labels:
        app: h2-database
    spec:
      containers:
        - name: h2
          image: luismrodriguezc/h2-database:v2
          ports:
            - containerPort: 9092
            - containerPort: 8082
