kubernetes/producto-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-producto-ingress
  namespace: ms-producto-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: ms-producto.server
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ms-producto-service
                port:
                  number: 8484  # Esto debe coincidir con el puerto del Service
